Fix alignment of browse button on front page

--- a/css/style.css
+++ b/css/style.css
@@ -249,6 +249,8 @@ h1
   width:75%;
   display:inline-block;
   height:30px;
+
+  margin-top:30px;
 }
 
 #searchbox
@@ -271,7 +273,6 @@ h1
 
 #searchwide
 {
-	margin-top:30px;
 	width:100%;
 	font-size: 1.4em;
 
@@ -299,6 +300,8 @@ h1
   display:inline-block;
   border-radius: 0px;
   height:30px;
+  
+  margin-top:30px;
 
 }
 
